@@ -1,5 +1,4 @@
 package com.simibubi.create.foundation.config.ui.entries;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -24,41 +23,30 @@ import com.simibubi.create.foundation.utility.Pair;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraftforge.common.ForgeConfigSpec;
-
 public class ValueEntry<T> extends ConfigScreenList.LabeledEntry {
-
 	protected static final int resetWidth = 28;//including 6px offset on either side
-
 	protected ForgeConfigSpec.ConfigValue<T> value;
 	protected ForgeConfigSpec.ValueSpec spec;
 	protected BoxWidget resetButton;
 	protected boolean editable = true;
-
 	public ValueEntry(String label, ForgeConfigSpec.ConfigValue<T> value, ForgeConfigSpec.ValueSpec spec) {
 		super(label);
 		this.value = value;
 		this.spec = spec;
 		this.path = String.join(".", value.getPath());
-
-		resetButton = new BoxWidget(0, 0, resetWidth - 12, 16)
-				.showingElement(AllIcons.I_CONFIG_RESET.asStencil())
+		resetButton = new BoxWidget(0, 0, resetWidth - 12, 16).showingElement(AllIcons.I_CONFIG_RESET.asStencil())
 				.withCallback(() -> {
 					setValue((T) spec.getDefault());
 					this.onReset();
 				});
-		resetButton.modifyElement(e -> ((DelegatedStencilElement) e).withElementRenderer(BoxWidget.gradientFactory.apply(resetButton)));
-
+		resetButton.modifyElement(e -> ((DelegatedStencilElement) e).withElementRenderer(BoxWidget.gradientFactory.apply(
+				resetButton)));
 		listeners.add(resetButton);
-
 		List<String> path = value.getPath();
 		labelTooltip.add(Components.literal(label).withStyle(ChatFormatting.WHITE));
 		String comment = spec.getComment();
-		if (comment == null || comment.isEmpty())
-			return;
-
+		if (comment == null || comment.isEmpty()) return;
 		List<String> commentLines = new ArrayList<>(Arrays.asList(comment.split("\n")));
-
-
 		Pair<String, Map<String, String>> metadata = ConfigHelper.readMetadataFromComment(commentLines);
 		if (metadata.getFirst() != null) {
 			unit = metadata.getFirst();
@@ -71,64 +59,63 @@ public class ValueEntry<T> extends ConfigScreenList.LabeledEntry {
 				.filter(Predicates.not(s -> s.startsWith("Range")))
 				.filter(s -> !s.equals("."))
 				.map(Components::literal)
-				.flatMap(stc -> TooltipHelper.cutTextComponent(stc, Palette.ALL_GRAY)
-						.stream())
-				.collect(Collectors.toList()));
-
+				.flatMap(stc -> TooltipHelper.cutTextComponent(stc, Palette.ALL_GRAY).stream())
+				.toList());
 		if (annotations.containsKey(ConfigAnnotations.RequiresRelog.TRUE.getName()))
-			labelTooltip.addAll(TooltipHelper.cutStringTextComponent("Changing this value will require a _relog_ to take full effect", Palette.GRAY_AND_GOLD));
-
+			labelTooltip.addAll(TooltipHelper.cutStringTextComponent(
+					"Changing this value will require a _relog_ to take full effect",
+					Palette.GRAY_AND_GOLD
+			));
 		if (annotations.containsKey(ConfigAnnotations.RequiresRestart.CLIENT.getName()))
-			labelTooltip.addAll(TooltipHelper.cutStringTextComponent("Changing this value will require a _restart_ to take full effect", Palette.GRAY_AND_RED));
-
-		labelTooltip.add(Components.literal(ConfigScreen.modID + ":" + path.get(path.size() - 1)).withStyle(ChatFormatting.DARK_GRAY));
+			labelTooltip.addAll(TooltipHelper.cutStringTextComponent(
+					"Changing this value will require a _restart_ to take full effect",
+					Palette.GRAY_AND_RED
+			));
+		labelTooltip.add(Components.literal(ConfigScreen.modID + ":" + path.get(path.size() - 1))
+				.withStyle(ChatFormatting.DARK_GRAY));
 	}
-
-	@Override
-	protected void setEditable(boolean b) {
+	@Override protected void setEditable(boolean b) {
 		editable = b;
 		resetButton.active = editable && !isCurrentValueDefault();
 		resetButton.animateGradientFromState();
 	}
-
-	@Override
-	public void tick() {
+	@Override public void tick() {
 		super.tick();
 		resetButton.tick();
 	}
-
-	@Override
-	public void render(GuiGraphics graphics, int index, int y, int x, int width, int height, int mouseX, int mouseY, boolean p_230432_9_, float partialTicks) {
+	@Override public void render(
+			GuiGraphics graphics,
+			int index,
+			int y,
+			int x,
+			int width,
+			int height,
+			int mouseX,
+			int mouseY,
+			boolean p_230432_9_,
+			float partialTicks
+	) {
 		super.render(graphics, index, y, x, width, height, mouseX, mouseY, p_230432_9_, partialTicks);
-
 		resetButton.setX(x + width - resetWidth + 6);
 		resetButton.setY(y + 10);
 		resetButton.render(graphics, mouseX, mouseY, partialTicks);
 	}
-
-	@Override
-	protected int getLabelWidth(int totalWidth) {
+	@Override protected int getLabelWidth(int totalWidth) {
 		return (int) (totalWidth * labelWidthMult) + 30;
 	}
-
 	public void setValue(@Nonnull T value) {
 		ConfigHelper.setValue(path, this.value, value, annotations);
 		onValueChange(value);
 	}
-
-	@Nonnull
-	public T getValue() {
+	@Nonnull public T getValue() {
 		return ConfigHelper.getValue(path, this.value);
 	}
-
 	protected boolean isCurrentValueDefault() {
 		return spec.getDefault().equals(getValue());
 	}
-
 	public void onReset() {
 		onValueChange(getValue());
 	}
-
 	public void onValueChange() {
 		onValueChange(getValue());
 	}
@@ -136,10 +123,10 @@ public class ValueEntry<T> extends ConfigScreenList.LabeledEntry {
 		resetButton.active = editable && !isCurrentValueDefault();
 		resetButton.animateGradientFromState();
 	}
-
-	protected void bumpCog() {bumpCog(10f);}
+	protected void bumpCog() {
+		bumpCog(10f);
+	}
 	protected void bumpCog(float force) {
-		if (list != null && list instanceof ConfigScreenList)
-			((ConfigScreenList) list).bumpCog(force);
+		if (list != null && list instanceof ConfigScreenList) ((ConfigScreenList) list).bumpCog(force);
 	}
 }
